--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Group_Project"
         tools:targetApi="31">
-
+        <activity
+            android:name=".MenuBtn"
+            android:exported="false" />
         <activity
             android:name=".activties.UsersActivity"
             android:exported="false" />
@@ -35,7 +37,6 @@
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -52,25 +53,16 @@
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".EmergencyChat"
-            android:exported="false" />
-        <activity
             android:name=".activties.MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".EmergencyMenu"
-            android:exported="false"
-            android:parentActivityName=".activties.MainActivity" />
+            android:exported="false" />
         <activity
             android:name=".EmergencyDialingList"
-            android:exported="false"
-            android:parentActivityName=".EmergencyMenu" />
+            android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
