--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature
-        android:name="android.hardware.telephony"
+    <uses-feature android:name="android.hardware.telephony"
         android:required="false" />
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -69,10 +68,6 @@
             android:name=".EmergencyDialingList"
             android:exported="false"
             android:parentActivityName=".EmergencyMenu"/>
-
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
 
         <service
             android:name=".firebase.MessagingService"
