--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -15,26 +20,45 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".CounsellorDetailsPage"
+            android:name=".CommunicationModule.ChatUsersPage"
+            android:exported="false"
+            android:parentActivityName=".CounsellorLandingPage" />
+        <activity
+            android:name=".CounsellorLandingPage"
             android:exported="false" />
         <activity
-            android:name=".ViewCounsellorsPage"
+            android:name=".CommunicationModule.ConsultationModulePage"
+            android:exported="false"
+            android:parentActivityName=".UserLandingPage"/>
+        <activity
+            android:name=".CommunicationModule.ChatPage"
             android:exported="false" />
         <activity
-            android:name=".ConfessionsPage"
+            android:name=".SignUpAsPage"
             android:exported="false" />
         <activity
-            android:name=".CommunicationLandingPage"
+            android:name=".CommunicationModule.CounsellorDetailsPage"
             android:exported="false" />
         <activity
-            android:name=".SearchResultsPage"
-            android:exported="false" />
+            android:name=".CommunicationModule.ChatCounsellorsPage"
+            android:exported="false"
+            android:parentActivityName=".CommunicationModule.ConsultationModulePage" />
         <activity
-            android:name=".SongsDiscoverPage"
-            android:exported="false" />
+            android:name=".CommunicationModule.ConfessionsPage"
+            android:exported="false"
+            android:parentActivityName=".CommunicationModule.ConsultationModulePage"/>
         <activity
-            android:name=".SongsMainPage"
-            android:exported="false" />
+            android:name=".MusicModule.SearchResultsPage"
+            android:exported="false"
+            android:parentActivityName=".MusicModule.SongsDiscoverPage"/>
+        <activity
+            android:name=".MusicModule.SongsDiscoverPage"
+            android:exported="false"
+            android:parentActivityName=".UserLandingPage" />
+        <activity
+            android:name=".MusicModule.SongsMainPage"
+            android:exported="false"
+            android:parentActivityName=".MusicModule.SongsDiscoverPage"/>
         <activity
             android:name=".UserLandingPage"
             android:exported="false" />
